subprojects/groovy-parser-antlr4/src/test/resources/fail/For_02.groovy
for (; a.size() < 10; *a) {}